chore: commit updates

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <form enctype="multipart/form-data" name='upload' id='upload'>
             <div class='form-group'>
                 <label class='custom-label'> Select file to upload: </label>
-                <input accept="image/png" type="file" name="user-file">
+                <input type="file" name="user-file">
             </div>
 
             <div style="padding-left:15%">
